# mockcoin

./: Block.cpp  Block.h  CMakeLists.txt  Node.cpp  Node.h  Transaction.cpp  Transaction.h  main.cpp
